// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`matches albums page 1`] = `
<div>
  <main
    class="space-y-24"
    style="opacity: 0;"
  >
    <section
      class="mt-18"
      style="opacity: 0; filter: blur(8px); transform: translateY(20px);"
    >
      <div
        class="flex-1"
      >
        <p
          class="text-zinc-600 dark:text-zinc-400"
        >
          These are a few of my favorite albums. You can also find me on
           
          <u>
            <a
              href="https://soundcloud.com/melledj"
              rel="noopener noreferrer"
              target="_blank"
            >
              SoundCloud
            </a>
          </u>
          .
        </p>
      </div>
      <div
        class="overflow-hidden mt-8"
      >
        <div
          class="flex w-max"
          style="gap: 24px; flex-direction: row; transform: none;"
        >
          <img
            alt="Artist - Album"
            class="aspect-square w-[120px] rounded-[4px]"
            src="https://i.scdn.co/image/id"
          />
          <img
            alt="Artist - Album"
            class="aspect-square w-[120px] rounded-[4px]"
            src="https://i.scdn.co/image/id"
          />
        </div>
      </div>
    </section>
  </main>
</div>
`;

exports[`matches blog layout 1`] = `
<div>
  <div
    class="pointer-events-none fixed left-0 top-0 z-10 h-12 w-full bg-gray-100 to-transparent backdrop-blur-xl [-webkit-mask-image:linear-gradient(to_bottom,black,transparent)] dark:bg-zinc-950"
  />
  <div
    class="inset-x-0 origin-left fixed top-0 z-20 h-0.5 bg-gray-300 dark:bg-zinc-600"
    style="transform: scaleX(0);"
  />
  <main
    class="prose prose-gray mt-24 pb-20 prose-h4:prose-base dark:prose-invert prose-h1:text-xl prose-h1:font-medium prose-h2:mt-12 prose-h2:scroll-m-20 prose-h2:text-lg prose-h2:font-medium prose-h3:text-base prose-h3:font-medium prose-h4:font-medium prose-h5:text-base prose-h5:font-medium prose-h6:text-base prose-h6:font-medium prose-strong:font-medium"
  />
</div>
`;

exports[`matches footer 1`] = `
<div>
  <footer
    class="mt-24 border-t border-zinc-100 px-0 py-4 dark:border-zinc-800"
  >
    <div
      class="flex items-center justify-between"
    >
      <a
        href="https://github.com/mellevanderlinde/portfolio"
        rel="noopener noreferrer"
        target="_blank"
      >
        <div
          class="relative inline-block whitespace-nowrap text-xs text-zinc-500"
        >
          <div
            style="opacity: 1; transform: none;"
          >
            <span>
              © 2026 Melle
            </span>
          </div>
        </div>
      </a>
      <div
        class="text-xs text-zinc-400"
      >
        <button
          aria-label="Switch to Light theme"
          class="relative inline-flex h-7 w-7 items-center justify-center text-zinc-500 transition-colors duration-100 focus-visible:outline-2 data-[checked=true]:text-zinc-950 dark:text-zinc-400 dark:data-[checked=true]:text-zinc-50"
          data-checked="false"
          data-id="light"
          type="button"
        >
          <div
            class="z-10"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-sun h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="4"
              />
              <path
                d="M12 2v2"
              />
              <path
                d="M12 20v2"
              />
              <path
                d="m4.93 4.93 1.41 1.41"
              />
              <path
                d="m17.66 17.66 1.41 1.41"
              />
              <path
                d="M2 12h2"
              />
              <path
                d="M20 12h2"
              />
              <path
                d="m6.34 17.66-1.41 1.41"
              />
              <path
                d="m19.07 4.93-1.41 1.41"
              />
            </svg>
          </div>
        </button>
        <button
          aria-label="Switch to Dark theme"
          class="relative inline-flex h-7 w-7 items-center justify-center text-zinc-500 transition-colors duration-100 focus-visible:outline-2 data-[checked=true]:text-zinc-950 dark:text-zinc-400 dark:data-[checked=true]:text-zinc-50"
          data-checked="false"
          data-id="dark"
          type="button"
        >
          <div
            class="z-10"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-moon h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 3a6 6 0 0 0 9 9 9 9 0 1 1-9-9Z"
              />
            </svg>
          </div>
        </button>
        <button
          aria-label="Switch to System theme"
          class="relative inline-flex h-7 w-7 items-center justify-center text-zinc-500 transition-colors duration-100 focus-visible:outline-2 data-[checked=true]:text-zinc-950 dark:text-zinc-400 dark:data-[checked=true]:text-zinc-50"
          data-checked="false"
          data-id="system"
          type="button"
        >
          <div
            class="z-10"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-monitor h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="14"
                rx="2"
                width="20"
                x="2"
                y="3"
              />
              <line
                x1="8"
                x2="16"
                y1="21"
                y2="21"
              />
              <line
                x1="12"
                x2="12"
                y1="17"
                y2="21"
              />
            </svg>
          </div>
        </button>
      </div>
    </div>
  </footer>
</div>
`;

exports[`matches header 1`] = `
<div>
  <header
    class="mb-8 flex items-center justify-between"
  >
    <div>
      <a
        class="font-medium text-black dark:text-white"
        href="/"
      >
        Melle van der Linde
      </a>
      <p
        class="text-zinc-600 dark:text-zinc-500"
        style="opacity: 0;"
      >
        <span
          class="sr-only"
        >
          Cloud Engineer
        </span>
        <span
          class="inline-block whitespace-pre"
        >
          <span
            aria-hidden="true"
            class="inline-block whitespace-pre"
            style="opacity: 0;"
          >
            C
          </span>
          <span
            aria-hidden="true"
            class="inline-block whitespace-pre"
            style="opacity: 0;"
          >
            l
          </span>
          <span
            aria-hidden="true"
            class="inline-block whitespace-pre"
            style="opacity: 0;"
          >
            o
          </span>
          <span
            aria-hidden="true"
            class="inline-block whitespace-pre"
            style="opacity: 0;"
          >
            u
          </span>
          <span
            aria-hidden="true"
            class="inline-block whitespace-pre"
            style="opacity: 0;"
          >
            d
          </span>
        </span>
        <span
          class="inline-block whitespace-pre"
        >
          <span
            aria-hidden="true"
            class="inline-block whitespace-pre"
            style="opacity: 0;"
          >
             
          </span>
        </span>
        <span
          class="inline-block whitespace-pre"
        >
          <span
            aria-hidden="true"
            class="inline-block whitespace-pre"
            style="opacity: 0;"
          >
            E
          </span>
          <span
            aria-hidden="true"
            class="inline-block whitespace-pre"
            style="opacity: 0;"
          >
            n
          </span>
          <span
            aria-hidden="true"
            class="inline-block whitespace-pre"
            style="opacity: 0;"
          >
            g
          </span>
          <span
            aria-hidden="true"
            class="inline-block whitespace-pre"
            style="opacity: 0;"
          >
            i
          </span>
          <span
            aria-hidden="true"
            class="inline-block whitespace-pre"
            style="opacity: 0;"
          >
            n
          </span>
          <span
            aria-hidden="true"
            class="inline-block whitespace-pre"
            style="opacity: 0;"
          >
            e
          </span>
          <span
            aria-hidden="true"
            class="inline-block whitespace-pre"
            style="opacity: 0;"
          >
            e
          </span>
          <span
            aria-hidden="true"
            class="inline-block whitespace-pre"
            style="opacity: 0;"
          >
            r
          </span>
        </span>
      </p>
    </div>
  </header>
</div>
`;

exports[`matches home 1`] = `
<div>
  <main
    class="space-y-24"
    style="opacity: 0;"
  >
    <section
      style="opacity: 0; filter: blur(8px); transform: translateY(20px);"
    >
      <div
        class="flex-1"
      >
        <p
          class="text-zinc-600 dark:text-zinc-400"
        >
          I work as AWS Cloud Engineer at PostNL in the CCoE (Cloud Center of Excellence) team. I'm interested in software engineering, cloud, machine learning, technology and sustainability.
        </p>
      </div>
    </section>
    <section
      style="opacity: 0; filter: blur(8px); transform: translateY(20px);"
    >
      <h3
        class="mb-5 text-lg font-medium"
      >
        Projects
      </h3>
      <div
        class="grid grid-cols-1 gap-6 sm:grid-cols-2"
      />
    </section>
    <section
      style="opacity: 0; filter: blur(8px); transform: translateY(20px);"
    >
      <h3
        class="mb-3 text-lg font-medium"
      >
        Blog
      </h3>
      <div
        class="flex flex-col space-y-0"
      />
    </section>
    <section
      style="opacity: 0; filter: blur(8px); transform: translateY(20px);"
    >
      <h3
        class="mb-5 text-lg font-medium"
      >
        Work
      </h3>
      <div
        class="flex flex-col space-y-2"
      />
    </section>
    <section
      style="opacity: 0; filter: blur(8px); transform: translateY(20px);"
    >
      <h3
        class="mb-5 text-lg font-medium"
      >
        Connect
      </h3>
      <p
        class="mb-5 text-zinc-600 dark:text-zinc-400"
      >
        Feel free to contact me on LinkedIn. Or see which
         
        <u>
          <a
            href="/albums"
          >
            albums
          </a>
        </u>
         
        I listen to.
      </p>
      <div
        class="flex items-center justify-start space-x-3"
      />
    </section>
  </main>
</div>
`;

exports[`matches robots 1`] = `
{
  "rules": {
    "allow": "/",
    "disallow": "/private/",
    "userAgent": "*",
  },
  "sitemap": "https://mellevanderlinde.com/sitemap.xml",
}
`;

exports[`matches root layout 1`] = `
<div>
  <script
    nonce=""
  >
    ((e,i,s,u,m,a,l,h)=&gt;{let d=document.documentElement,w=["light","dark"];function p(n){(Array.isArray(e)?e:[e]).forEach(y=&gt;{let k=y==="class",S=k&&a?m.map(f=&gt;a[f]||f):m;k?(d.classList.remove(...S),d.classList.add(a&&a[n]?a[n]:n)):d.setAttribute(y,n)}),R(n)}function R(n){h&&w.includes(n)&&(d.style.colorScheme=n)}function c(){return window.matchMedia("(prefers-color-scheme: dark)").matches?"dark":"light"}if(u)p(u);else try{let n=localStorage.getItem(i)||s,y=l&&n==="system"?c():n;p(y)}catch(n){}})("class","theme","system",null,["light","dark"],null,true,true)
  </script>
  <div
    class="flex min-h-screen w-full flex-col font-[family-name:var(--font-inter-tight)]"
  >
    <div
      class="relative mx-auto w-full max-w-screen-sm flex-1 px-4 pt-20"
    >
      <header
        class="mb-8 flex items-center justify-between"
      >
        <div>
          <a
            class="font-medium text-black dark:text-white"
            href="/"
          >
            Melle van der Linde
          </a>
          <p
            class="text-zinc-600 dark:text-zinc-500"
            style="opacity: 0;"
          >
            <span
              class="sr-only"
            >
              Cloud Engineer
            </span>
            <span
              class="inline-block whitespace-pre"
            >
              <span
                aria-hidden="true"
                class="inline-block whitespace-pre"
                style="opacity: 0;"
              >
                C
              </span>
              <span
                aria-hidden="true"
                class="inline-block whitespace-pre"
                style="opacity: 0;"
              >
                l
              </span>
              <span
                aria-hidden="true"
                class="inline-block whitespace-pre"
                style="opacity: 0;"
              >
                o
              </span>
              <span
                aria-hidden="true"
                class="inline-block whitespace-pre"
                style="opacity: 0;"
              >
                u
              </span>
              <span
                aria-hidden="true"
                class="inline-block whitespace-pre"
                style="opacity: 0;"
              >
                d
              </span>
            </span>
            <span
              class="inline-block whitespace-pre"
            >
              <span
                aria-hidden="true"
                class="inline-block whitespace-pre"
                style="opacity: 0;"
              >
                 
              </span>
            </span>
            <span
              class="inline-block whitespace-pre"
            >
              <span
                aria-hidden="true"
                class="inline-block whitespace-pre"
                style="opacity: 0;"
              >
                E
              </span>
              <span
                aria-hidden="true"
                class="inline-block whitespace-pre"
                style="opacity: 0;"
              >
                n
              </span>
              <span
                aria-hidden="true"
                class="inline-block whitespace-pre"
                style="opacity: 0;"
              >
                g
              </span>
              <span
                aria-hidden="true"
                class="inline-block whitespace-pre"
                style="opacity: 0;"
              >
                i
              </span>
              <span
                aria-hidden="true"
                class="inline-block whitespace-pre"
                style="opacity: 0;"
              >
                n
              </span>
              <span
                aria-hidden="true"
                class="inline-block whitespace-pre"
                style="opacity: 0;"
              >
                e
              </span>
              <span
                aria-hidden="true"
                class="inline-block whitespace-pre"
                style="opacity: 0;"
              >
                e
              </span>
              <span
                aria-hidden="true"
                class="inline-block whitespace-pre"
                style="opacity: 0;"
              >
                r
              </span>
            </span>
          </p>
        </div>
      </header>
      <footer
        class="mt-24 border-t border-zinc-100 px-0 py-4 dark:border-zinc-800"
      >
        <div
          class="flex items-center justify-between"
        >
          <a
            href="https://github.com/mellevanderlinde/portfolio"
            rel="noopener noreferrer"
            target="_blank"
          >
            <div
              class="relative inline-block whitespace-nowrap text-xs text-zinc-500"
            >
              <div
                style="opacity: 1; transform: none;"
              >
                <span>
                  © 2026 Melle
                </span>
              </div>
            </div>
          </a>
          <div
            class="text-xs text-zinc-400"
          >
            <button
              aria-label="Switch to Light theme"
              class="relative inline-flex h-7 w-7 items-center justify-center text-zinc-500 transition-colors duration-100 focus-visible:outline-2 data-[checked=true]:text-zinc-950 dark:text-zinc-400 dark:data-[checked=true]:text-zinc-50"
              data-checked="false"
              data-id="light"
              type="button"
            >
              <div
                class="z-10"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-sun h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="4"
                  />
                  <path
                    d="M12 2v2"
                  />
                  <path
                    d="M12 20v2"
                  />
                  <path
                    d="m4.93 4.93 1.41 1.41"
                  />
                  <path
                    d="m17.66 17.66 1.41 1.41"
                  />
                  <path
                    d="M2 12h2"
                  />
                  <path
                    d="M20 12h2"
                  />
                  <path
                    d="m6.34 17.66-1.41 1.41"
                  />
                  <path
                    d="m19.07 4.93-1.41 1.41"
                  />
                </svg>
              </div>
            </button>
            <button
              aria-label="Switch to Dark theme"
              class="relative inline-flex h-7 w-7 items-center justify-center text-zinc-500 transition-colors duration-100 focus-visible:outline-2 data-[checked=true]:text-zinc-950 dark:text-zinc-400 dark:data-[checked=true]:text-zinc-50"
              data-checked="false"
              data-id="dark"
              type="button"
            >
              <div
                class="z-10"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-moon h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 3a6 6 0 0 0 9 9 9 9 0 1 1-9-9Z"
                  />
                </svg>
              </div>
            </button>
            <button
              aria-label="Switch to System theme"
              class="relative inline-flex h-7 w-7 items-center justify-center text-zinc-500 transition-colors duration-100 focus-visible:outline-2 data-[checked=true]:text-zinc-950 dark:text-zinc-400 dark:data-[checked=true]:text-zinc-50"
              data-checked="true"
              data-id="system"
              type="button"
            >
              <div
                class="absolute inset-0 pointer-events-none rounded-lg bg-zinc-100 dark:bg-zinc-800"
                style="opacity: 1;"
              />
              <div
                class="z-10"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-monitor h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    height="14"
                    rx="2"
                    width="20"
                    x="2"
                    y="3"
                  />
                  <line
                    x1="8"
                    x2="16"
                    y1="21"
                    y2="21"
                  />
                  <line
                    x1="12"
                    x2="12"
                    y1="17"
                    y2="21"
                  />
                </svg>
              </div>
            </button>
          </div>
        </div>
      </footer>
    </div>
  </div>
</div>
`;

exports[`matches sitemap 1`] = `
[
  {
    "lastModified": "2024-01-01T00:00:00.000Z",
    "url": "https://mellevanderlinde.com",
  },
]
`;
